// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Separator renders correctly horizontally 1`] = `
<DocumentFragment>
  .css-t2u5cx-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="css-t2u5cx-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly vertically 1`] = `
<DocumentFragment>
  .css-1eogk8l-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="vertical"
    class="css-1eogk8l-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color 1`] = `
<DocumentFragment>
  .css-1tduy4y-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #8c40ef;
}

<hr
    aria-orientation="horizontal"
    class="css-1tduy4y-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with custom color and icon 1`] = `
<DocumentFragment>
  .css-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-i5ps2t-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #8c40ef;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-1k9gw7e-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #641cb3;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #8c40ef;
}

.css-1k9gw7e-sizeStyles-StyledIcon .fillStroke {
  stroke: #641cb3;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="css-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="css-i5ps2t-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 css-1k9gw7e-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4C12.4142 4 12.75 4.33579 12.75 4.75V17.3401L14.7004 15.2397C14.9823 14.9361 15.4568 14.9186 15.7603 15.2004C16.0639 15.4823 16.0815 15.9568 15.7996 16.2603L12.5496 19.7603C12.4077 19.9132 12.2086 20 12 20C11.7915 20 11.5923 19.9132 11.4504 19.7603L8.20041 16.2603C7.91856 15.9568 7.93613 15.4823 8.23966 15.2004C8.5432 14.9186 9.01775 14.9361 9.2996 15.2397L11.25 17.3401V4.75C11.25 4.33579 11.5858 4 12 4Z"
        fill-rule="evenodd"
      />
      <path
        d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
      />
    </svg>
    <hr
      class="css-i5ps2t-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon 1`] = `
<DocumentFragment>
  .css-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-o8o6e4-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-14udnqy-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

.css-14udnqy-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="css-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="css-o8o6e4-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 css-14udnqy-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4C12.4142 4 12.75 4.33579 12.75 4.75V17.3401L14.7004 15.2397C14.9823 14.9361 15.4568 14.9186 15.7603 15.2004C16.0639 15.4823 16.0815 15.9568 15.7996 16.2603L12.5496 19.7603C12.4077 19.9132 12.2086 20 12 20C11.7915 20 11.5923 19.9132 11.4504 19.7603L8.20041 16.2603C7.91856 15.9568 7.93613 15.4823 8.23966 15.2004C8.5432 14.9186 9.01775 14.9361 9.2996 15.2397L11.25 17.3401V4.75C11.25 4.33579 11.5858 4 12 4Z"
        fill-rule="evenodd"
      />
      <path
        d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
      />
    </svg>
    <hr
      class="css-o8o6e4-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon horizontally 1`] = `
<DocumentFragment>
  .css-1gpqkcp-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-o8o6e4-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-14udnqy-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

.css-14udnqy-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="horizontal"
    class="css-1gpqkcp-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="css-o8o6e4-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 css-14udnqy-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4C12.4142 4 12.75 4.33579 12.75 4.75V17.3401L14.7004 15.2397C14.9823 14.9361 15.4568 14.9186 15.7603 15.2004C16.0639 15.4823 16.0815 15.9568 15.7996 16.2603L12.5496 19.7603C12.4077 19.9132 12.2086 20 12 20C11.7915 20 11.5923 19.9132 11.4504 19.7603L8.20041 16.2603C7.91856 15.9568 7.93613 15.4823 8.23966 15.2004C8.5432 14.9186 9.01775 14.9361 9.2996 15.2397L11.25 17.3401V4.75C11.25 4.33579 11.5858 4 12 4Z"
        fill-rule="evenodd"
      />
      <path
        d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
      />
    </svg>
    <hr
      class="css-o8o6e4-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom icon vertically 1`] = `
<DocumentFragment>
  .css-15vpxe5-StyledIconWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.css-mnsfne-StyledHr {
  margin: 0;
  border: 0;
  width: 1px;
  height: auto;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.css-14udnqy-sizeStyles-StyledIcon {
  vertical-align: middle;
  fill: #3f4250;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  fill: #d9dadd;
}

.css-14udnqy-sizeStyles-StyledIcon .fillStroke {
  stroke: #3f4250;
  fill: none;
}

<div
    aria-orientation="vertical"
    class="css-15vpxe5-StyledIconWrapper e1d1zom92"
    role="separator"
  >
    <hr
      class="css-mnsfne-StyledHr e1d1zom90"
    />
    <svg
      class="e1d1zom91 css-14udnqy-sizeStyles-StyledIcon e1gt4cfo0"
      viewBox="0 0 20 20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M12 4C12.4142 4 12.75 4.33579 12.75 4.75V17.3401L14.7004 15.2397C14.9823 14.9361 15.4568 14.9186 15.7603 15.2004C16.0639 15.4823 16.0815 15.9568 15.7996 16.2603L12.5496 19.7603C12.4077 19.9132 12.2086 20 12 20C11.7915 20 11.5923 19.9132 11.4504 19.7603L8.20041 16.2603C7.91856 15.9568 7.93613 15.4823 8.23966 15.2004C8.5432 14.9186 9.01775 14.9361 9.2996 15.2397L11.25 17.3401V4.75C11.25 4.33579 11.5858 4 12 4Z"
        fill-rule="evenodd"
      />
      <path
        d="M14 6C14 7.10457 13.1046 8 12 8C10.8954 8 10 7.10457 10 6C10 4.89543 10.8954 4 12 4C13.1046 4 14 4.89543 14 6Z"
      />
    </svg>
    <hr
      class="css-mnsfne-StyledHr e1d1zom90"
    />
  </div>
</DocumentFragment>
`;

exports[`Separator renders correctly with custom thickness 1`] = `
<DocumentFragment>
  .css-1669bo1-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 3px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="css-1669bo1-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;

exports[`Separator renders correctly with default props 1`] = `
<DocumentFragment>
  .css-t2u5cx-StyledHr {
  margin: 0;
  border: 0;
  width: auto;
  height: 1px;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  background-color: #d9dadd;
}

<hr
    aria-orientation="horizontal"
    class="css-t2u5cx-StyledHr e1d1zom90"
    role="separator"
  />
</DocumentFragment>
`;
